fixed image in the block Team on mobile (added no-repeat)

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -109,6 +109,7 @@
     left: 0;
     z-index: -1;
     background-image: url(../images/svg/rectangle-team-mobile.svg);
+    background-repeat: no-repeat;
 
     @include onTablet {
       top: 2718px;
@@ -188,10 +189,11 @@
     position: absolute;
     top: 4400px;
     left: 0;
-    width: 100vw;
+    width: 320px;
     height: 240px;
     background-image: url(../images/png/POTR-Pots-team.jpeg);
     background-size: contain;
+    background-repeat: no-repeat;
 
     @include onTablet {
       display: none;
